syntax = "proto3";

package tech.kayys.wayang.workflow.v1;

option java_multiple_files = true;
option java_package = "tech.kayys.wayang.workflow.v1";
option java_outer_classname = "EventStoreProto";

service EventStoreService {
  rpc GetRunEvents(GetRunEventsRequest) returns (GetEventsResponse);
  rpc GetEventsByType(GetEventsByTypeRequest) returns (GetEventsResponse);
}

message GetRunEventsRequest { string run_id = 1; }

message GetEventsByTypeRequest {
  string run_id = 1;
  string event_type = 2;
}

message WorkflowEvent {
  string id = 1;
  string type = 2;
  int64 timestamp = 3;
  string payload_json = 4;
}

message GetEventsResponse { repeated WorkflowEvent events = 1; }
